# agents

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
requirements/: requirements.txt
resources/: build-image.sh  context.py  lint.sh
src/shapeandshare/agents/core/: README.md
src/shapeandshare/agents/core/charts/chromadb/: Chart.yaml  values.yaml
src/shapeandshare/agents/core/charts/chromadb/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  (+2 more)
src/shapeandshare/agents/core/charts/mongodb/: Chart.yaml  values.yaml
src/shapeandshare/agents/core/charts/rabbitmq/: Chart.yaml  values.yaml
src/shapeandshare/agents/core/framework/interfaces/: agent.py
src/shapeandshare/agents/core/services/chathistory/: service.py
src/shapeandshare/agents/core/services/vector/: service.py
src/shapeandshare/agents/git/: README.md  agent.py  context.py  prompts.py
src/shapeandshare/agents/git/api/: context.py  main.py
src/shapeandshare/agents/git/api/middleware/: error.py
src/shapeandshare/agents/git/api/routers/: git.py
src/shapeandshare/agents/git/charts/git-agent/: Chart.yaml  values.yaml
src/shapeandshare/agents/git/sdk/client/: git.py
src/shapeandshare/agents/git/sdk/example/: client.py
src/shapeandshare/agents/git/services/analysis/: service.py
src/shapeandshare/agents/git/services/metadata/: service.py
src/shapeandshare/agents/git/services/repository/: service.py
src/shapeandshare/agents/git/workers/: analysis.py  repository.py
src/shapeandshare/agents/sdk/contracts/dtos/: command_options.py  wrapped_request.py
(+76 files in other folders)
